src/FinancialForce Accounting/objects/TransactionReconciliation__c.object
<CustomObject>
    <description>Stores transaction reconciliation header details.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First Company</description>
        <label>First Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>First Company Reconciliations</relationshipLabel>
        <relationshipName>FirstCompanyReconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchOnAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match on Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchOnDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match on Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchOnICTRef__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Match on ICT ref</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutstandingDifference__c</fullName>
        <label>Outstanding Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReconciliationsName__c</fullName>
        <description>Name of Reconciliation</description>
        <label>Reconciliations Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second Company</description>
        <label>Second Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Second Company Reconciliations</relationshipLabel>
        <relationshipName>SecondCompanyReconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ReconciliationsName__c</columns>
        <columns>Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>FirstCompany__c</columns>
        <columns>SecondCompany__c</columns>
        <columns>OutstandingDifference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TREC-{0000}</displayFormat>
        <label>Transaction Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>